dark mode issues solved and implemented on entire app

--- a/src/components/navbarHome/style.css
+++ b/src/components/navbarHome/style.css
@@ -9,7 +9,8 @@
     letter-spacing: 0.2em; 
     display:flex;
     position: fixed;
-   
+    
+    z-index:50; 
     
 }
 
@@ -29,6 +30,7 @@
     display:flex;
     justify-content: flex-start;
     align-items: flex-end;
+    
 }
 
 .navbar .left-side #hidden{
@@ -41,6 +43,7 @@
     font-size: 1em;
     padding: 0em 0em 0em 3em; 
     color: #121212;
+   
     
 }
 .navbar .right-side span {
@@ -81,7 +84,6 @@ html{
 
     }
 
-
 }
 
 
@@ -90,32 +92,36 @@ html{
 
     .navbar{
         z-index:1;
+        background-color: transparent;
     }
 
     .navbar .left-side button {
         display:flex;
-        padding-left: 2.2em
+        padding-left: 2.2em;
+        background-color: transparent;
     
     }
 
     .navbar .left-side .links{
         display:none;
+        background-color: transparent;
 
     }
 
     .navbar .right-side span{
         font-size: 10px;
+        background-color: transparent;
        
 
     }
 
-    .navbar .left-side #hidden{
+    .navbar .left-side #hidden {
        position:absolute;
        left:0px;
        top:80px;
        height: 230px;
        width:100%;
-       background-color: rgb(249, 244, 236);
+       background-color: transparent;
        
        display: flex;
        flex-direction: column;
@@ -127,6 +133,7 @@ html{
     .navbar .left-side #hidden a{
         margin:10px;
         font-size: 20px;
+        /* background-color: blue */
         
 
     }
